--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <div class="msg-container">
         <p id="msg">play your move!</p>
     </div>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
